# deltaflow

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
deltaflow-harness/: Cargo.toml  README.md
deltaflow-harness/assets/: index.html
deltaflow-harness/assets/css/: main.css
deltaflow-harness/assets/js/: config.js  graph.js  interaction.js  main.js  render.js
deltaflow-harness/src/: ext.rs  graph.rs  lib.rs  server.rs
deltaflow-harness/tests/: integration.rs
deltaflow-visualizer/: Cargo.toml
deltaflow-visualizer/assets/: index.html
deltaflow-visualizer/src/: ext.rs  graph.rs  lib.rs  server.rs
deltaflow-visualizer/tests/: integration.rs
docs/: DESIGN.md  IMPLEMENTATION.md
docs/plans/: 2025-12-04-deltaflow-docs-design.md  2025-12-04-task-runner-design.md  2025-12-04-task-runner-implementation.md
examples/: basic.rs  visualizer_complex.rs  visualizer_demo.rs
src/: lib.rs  pipeline.rs  recorder.rs  retry.rs  sqlite.rs  step.rs
src/runner/: erased.rs  executor.rs  mod.rs  sqlite_store.rs  store.rs
src/scheduler/: builder.rs  graph.rs  job.rs  mod.rs
tests/: concurrency_bug_test.rs  delayed_emit_test.rs  failure_modes_test.rs  fork_fanout_test.rs  integration.rs  metadata_test.rs  ordering_test.rs  runner_test.rs  scheduler_test.rs  sqlite_integration.rs  stateful_routing_test.rs  task_store_test.rs
