[package]
name = "delta"
version = "0.1.0"
edition = "2021"
description = "A lightweight, type-safe pipeline engine for Rust"
license = "MIT"
repository = "https://github.com/mavdi/delta"

[features]
default = []
sqlite = ["dep:sqlx"]

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
anyhow = "1"

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite"]
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
