[workspace]
members = [".", "deltaflow-harness"]

[package]
name = "deltaflow"
version = "0.5.0"
edition = "2021"
description = "The embeddable workflow engine. Type-safe, Elixir-inspired pipelines."
license = "MIT"
repository = "https://github.com/mavdi/deltaflow"
documentation = "https://docs.rs/deltaflow"
readme = "README.md"
keywords = ["workflow", "pipeline", "async", "jobs", "tasks"]
categories = ["asynchronous", "concurrency"]

[features]
default = []
sqlite = ["dep:sqlx"]

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite"]
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
deltaflow-harness = { path = "deltaflow-harness" }
