[package]
name = "deltaflow-harness"
version = "0.1.0"
edition = "2021"
description = "Web-based pipeline visualization for Deltaflow"
license = "MIT"
repository = "https://github.com/mavdi/deltaflow"
documentation = "https://docs.rs/deltaflow-harness"
readme = "README.md"
keywords = ["workflow", "pipeline", "visualization", "deltaflow"]
categories = ["development-tools", "visualization"]

[dependencies]
deltaflow = { version = "0.4", features = ["sqlite"] }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
async-trait = "0.1"
